--- a/templates/accounts/register-page.html
+++ b/templates/accounts/register-page.html
@@ -1,33 +1,21 @@
 {% extends 'base/base.html' %}
 {% block page_content %}
 
-    <!-- Start Register Section -->
     <div class="login-register-div">
         <div class="login-register-box">
             <h1>Petstagram</h1>
 
-            <!-- Start Register Form -->
-            <form action="">
-                <input type="text" placeholder="Username">
-
-                <input type="email" placeholder="Email">
-
-                <input type="password" placeholder="Password">
-
-                <input type="password" placeholder="Repeat Password">
-
-                <!-- Register Button -->
+            <form method="post" action="{% url 'user register' %}">
+                {{ form.username }}
+                {{ form.email }}
+                {{ form.password1 }}
+                {{ form.password2 }}
                 <button type="submit">Register</button>
+                {% csrf_token %}
             </form>
-            <!-- End Register Form -->
-
         </div>
         <div class="second-option">
-
-            <!-- Link to Login Page -->
             <p>Have an account? <a href="{% url 'user login' %}">Log in</a></p>
         </div>
     </div>
-    <!-- End Register Section -->
-
 {% endblock %}
