--- a/templates/accounts/register-page.html
+++ b/templates/accounts/register-page.html
@@ -1,4 +1,7 @@
 {% extends 'base/base.html' %}
+
+{% load placeholders %}
+
 {% block page_content %}
 
     <div class="login-register-div">
@@ -6,10 +9,10 @@
             <h1>Petstagram</h1>
 
             <form method="post" action="{% url 'user register' %}">
-                {{ form.username }}
-                {{ form.email }}
-                {{ form.password1 }}
-                {{ form.password2 }}
+                {{ form.username|placeholder:'Username:' }}
+                {{ form.email|placeholder:'Email:' }}
+                {{ form.password1|placeholder:'Password:' }}
+                {{ form.password2|placeholder:'Password:' }}
                 <button type="submit">Register</button>
                 {% csrf_token %}
             </form>
