--- a/templates/accounts/profile-delete-page.html
+++ b/templates/accounts/profile-delete-page.html
@@ -1,16 +1,17 @@
 {% extends 'base/base.html' %}
 {% block page_content %}
     {% load static %}
-        <div class="delete-profile">
-            <h1>
-                Are you sure you want to delete your profile?
-            </h1>
-            <div class="sure-buttons">
-                <form method="post" action="{% url 'delete user' pk=request.user.pk %}"></form>
-                    <button>Yes</button>
-                    {% csrf_token %}
-                    <a class="edit-btn" href="javascript:history.back()">Go Back</a>
-            </div>
-            <img src="{% static 'images/are_you_sure_cat.gif'%}" alt="are you sure cat git">
+    <div class="delete-profile">
+        <h1>
+            Are you sure you want to delete your profile?
+        </h1>
+        <div class="sure-buttons">
+            <form method="post" action="{% url 'delete user' pk=request.user.pk %}">
+                {% csrf_token %}
+                <button type="submit" class="delete-btn">Yes</button>
+            </form>
+            <a class="edit-btn" href="javascript:history.back()">Go Back</a>
         </div>
+        <img src="{% static 'images/are_you_sure_cat.gif' %}" alt="are you sure cat gif">
+    </div>
 {% endblock %}
