--- a/templates/base/partials/nav.html
+++ b/templates/base/partials/nav.html
@@ -15,38 +15,15 @@
 
             <div class="nav-links">
                 <ul class="nav-group">
-                    <li class="nav-item">
-                        <a href="{% url 'add pet' %}">
-                            <i>Add Pet</i>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="{% url 'add photo' %}">
-                            <i>Add Photo</i>
-                        </a>
-                    </li>
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                            <a href="{% url 'details user' pk=request.user.pk %}">
-                                <i>Profile</i>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'user logout' %}">
-                                <i>Logout</i>
-                            </a>
-                        </li>
+                    <li class="nav-item"><a href="{% url 'add pet' %}"><i>Add Pet</i></a></li>
+                    <li class="nav-item"><a href="{% url 'add photo' %}"><i>Add Photo</i></a></li>
+                    {% if not request.user.is_authenticated %}
+                        <li class="nav-item"><a href="{% url 'user register' %}"><i>Sign Up</i></a></li>
+                        <li class="nav-item"><a href="{% url 'user login' %}"><i>Sign In</i></a></li>
+
                     {% else %}
-                        <li class="nav-item">
-                            <a href="{% url 'user register' %}">
-                                <i>Sign Up</i>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'user login' %}">
-                                <i>Sign In</i>
-                            </a>
-                        </li>
+                        <li class="nav-item"><a href="{% url 'details user' pk=request.user.pk %}"><i>Profile</i></a></li>
+                        <li class="nav-item"><a href="{% url 'user logout' %}"><i>Logout</i></a></li>
                     {% endif %}
                 </ul>
             </div>
