--- a/templates/accounts/profile-details-page.html
+++ b/templates/accounts/profile-details-page.html
@@ -46,7 +46,6 @@
                 {% endif %}
             </div>
         </div>
-        <!-- End Profile Personal Data Section -->
 
         <div class="pets">
             <div class="statuses">
@@ -66,40 +65,35 @@
                 {% endfor %}
             </div>
         </div>
-        <!-- End Pets Data Section -->
 
-        <!-- Start Last Uploaded Photos Section -->
         <div class="pet-photos">
-
-            <!-- Link to Last Uploaded Pet Photo -->
-            <a href="#">
-                <!-- Pet Photo -->
-                <img src="https://i.natgeofe.com/n/de94c416-6d23-45f5-9708-e8d56289268e/naturepl_01132178.jpg?w=636&h=631"
-                     alt="pet img">
+            {% for pet_photo in photos %}
+                <a href="{% url 'details photo' pk=pet_photo.pk %}">
+                <img src="{{ pet_photo.photo.url }}"
+                alt="pet img">
             </a>
+            {% endfor %}
 
-            <!-- Link to Uploaded Pet Photo -->
-            <a href="#">
-                <!-- Pet Photo -->
-                <img src="https://cf.ltkcdn.net/small-pets/images/orig/278587-1600x1066-goldfish-swimming-in-fish-tank.jpg"
-                     alt="pet img">
-            </a>
+            <div class="pagination">
+                <span class="step-links">
+                    {% if photos.has_previous %}
+                        <a href="?page=1">&laquo; first</a>
+                        <a href="?page={{ photos.previous_page_number }}">previous</a>
+                    {% endif %}
 
-            <!-- Link to Uploaded Pet Photo -->
-            <a href="#">
-                <!-- Pet Photo -->
-                <img src="https://thumbs.dreamstime.com/b/small-golden-retriever-puppy-6482030.jpg" alt="pet img">
-            </a>
+                    <span class="current">
+                        Page {{ photos.number }} of {{ photos.paginator.num_pages }}.
+                    </span>
 
-            <!-- Link to  Uploaded Pet Photo -->
-            <a href="#">
-                <!-- Pet Photo -->
-                <img src="https://i.pinimg.com/originals/4e/55/83/4e5583748bc4000805df50e4ebcafffc.png" alt="pet img">
-            </a>
+                    {% if photos.has_next %}
+                        <a href="?page={{ photos.next_page_number }}">next</a>
+                        <a href="?page={{ photos.paginator.num_pages }}">last &raquo;</a>
+                    {% endif %}
+                </span>
+            </div>
+
+
+
         </div>
-        <!-- End Last Uploaded Photos Section -->
-
     </div>
-    <!-- End Profile Details Section -->
-
 {% endblock %}
