--- a/templates/photos/photo-details-page.html
+++ b/templates/photos/photo-details-page.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="imgBx" id="{{ photo.pk }}">
-                    <img src="/media/{{ photo.photo }}"
+                    <img src="{{ photo.photo.url }}"
                          alt="photo of the pets {{ photo.tagged_pets.all|join:', ' }}"
                          class="cover">
                 </div>
